--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
                         <!-- Solutions And Services dropdown -->
                         <li class="nav-item dropdown ">
                             <!-- solutions and services dropdown toggle -->
-                            <a href="products-services.html"  class="nav-link text-primary" type="link" id="solutions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a href="./products/"  class="nav-link text-primary" type="link" id="solutions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                               Solutions and Services
                             </a>
                             <!-- solutions and services dropdown items -->
@@ -85,14 +85,14 @@
                                 <!-- consulting -->
                                 <li class="dropdown-submenu">
                                     <!-- consulting dropdown toggle/link -->
-                                    <a  class="dropdown-item text-primary" tabindex="-1" href="products-services.html#consulting">Consulting</a>
+                                    <a  class="dropdown-item text-primary" tabindex="-1" href="./products/consulting.html">Consulting</a>
                                     <!-- consulting dropdown items -->
                                     <ul class="dropdown-menu">
                                         <li class="dropdown-submenu">
-                                            <a class="dropdown-item text-primary" href="products-services.html#strategy-and-oprations">Strategy and Operations</a>
-                                            <a class="dropdown-item text-primary" href="products-services.html#technology-consulting">Technology Consulting</a>
-                                            <a class="dropdown-item text-primary" href="products-services.html#project-management-services">Project Management Services</a>
-                                            <a class="dropdown-item text-primary" href="products-services.html#">To Add</a>
+                                            <a class="dropdown-item text-primary" href="./products/consulting.html#strategy-and-oprations">Strategy and Operations</a>
+                                            <a class="dropdown-item text-primary" href="./products/consulting.html#technology-consulting">Technology Consulting</a>
+                                            <a class="dropdown-item text-primary" href="./products/consulting.html#project-management-services">Project Management Services</a>
+                                            <a class="dropdown-item text-primary" href="./products/consulting.html#">To Add</a>
                                         </li>
                                     </ul>
                                 </li>
@@ -100,18 +100,18 @@
                                 <!-- Digital Solutions -->
                                 <li class="dropdown-submenu">
                                     <!-- digital solutions and services dropdown link/toggle -->
-                                    <a  class="dropdown-item text-primary" tabindex="-1" href="products-services.html#digital-solutions">Digital Solutions</a>
+                                    <a  class="dropdown-item text-primary" tabindex="-1" href="./products/digital.html">Digital Solutions</a>
                                     <!-- digital solutions dropdown items -->
                                     <ul class="dropdown-menu">
                                         <li class="dropdown-submenu">
-                                            <a class="dropdown-item text-primary" href="products-services.html#customer-relationship-management">Customer Relationship Management</a>
-                                            <a class="dropdown-item text-primary" href="products-services.html#electronic-content-management">Electronic Content Management</a>
-                                            <a class="dropdown-item text-primary" href="products-services.html#eprocurement">eProcurement</a>
-                                            <a class="dropdown-item text-primary" href="products-services.html#real-eastate-management-system">Real Estate Management System</a>
-                                            <a class="dropdown-item text-primary" href="products-services.html#custom-application-development">Custom Application Development</a>
-                                            <a class="dropdown-item text-primary" href="products-services.html#project-portfolio-management">Project Portfolio Management</a>
-                                            <a class="dropdown-item text-primary" href="products-services.html#enterprise-resource-planning">Enterprise Resource Planning</a>
-                                            <a class="dropdown-item text-primary" href="products-services.html#web-and-mobile-applications">Web and Mobile Apllications</a>
+                                            <a class="dropdown-item text-primary" href="./products/digital.html#customer-relationship-management">Customer Relationship Management</a>
+                                            <a class="dropdown-item text-primary" href="./products/digital.html#electronic-content-management">Electronic Content Management</a>
+                                            <a class="dropdown-item text-primary" href="./products/digital.html#eprocurement">eProcurement</a>
+                                            <a class="dropdown-item text-primary" href="./products/digital.html#real-eastate-management-system">Real Estate Management System</a>
+                                            <a class="dropdown-item text-primary" href="./products/digital.html#custom-application-development">Custom Application Development</a>
+                                            <a class="dropdown-item text-primary" href="./products/digital.html#project-portfolio-management">Project Portfolio Management</a>
+                                            <a class="dropdown-item text-primary" href="./products/digital.html#enterprise-resource-planning">Enterprise Resource Planning</a>
+                                            <a class="dropdown-item text-primary" href="./products/digital.html#web-and-mobile-applications">Web and Mobile Apllications</a>
                                         </li>
                                     </ul>
                                 </li>
@@ -119,23 +119,23 @@
                                 <!-- Cloud services -->
                                 <li class="dropdown-submenu">
                                     <!-- cloud services dropdownlink/toggle -->
-                                    <a  class="dropdown-item text-primary" tabindex="-1" href="products-services.html#cloud-services">Cloud Services</a>
+                                    <a  class="dropdown-item text-primary" tabindex="-1" href="./products/cloud_services.html">Cloud Services</a>
                                     <!-- cloud services dropdown items -->
                                     <ul class="dropdown-menu">
-                                        <a class="dropdown-item text-primary" href="products-services.html#infrastructure-as-a-service">Infrastructure As A Sercvice</a>
-                                        <a class="dropdown-item text-primary" href="products-services.html#software-as-a-service">Software As A Service</a>
+                                        <a class="dropdown-item text-primary" href="./products/cloud_services.html#infrastructure-as-a-service">Infrastructure As A Sercvice</a>
+                                        <a class="dropdown-item text-primary" href="./products/cloud_services.html#software-as-a-service">Software As A Service</a>
                                     </ul>
                                 </li>
 
                                 <!-- Devices -->
                                 <li class="dropdown-submenu">
                                     <!-- devices dropdownlink/toggle -->
-                                    <a  class="dropdown-item text-primary" tabindex="-1" href="products-services.html#devices">Devices</a>
+                                    <a  class="dropdown-item text-primary" tabindex="-1" href="./products/devices.html">Devices</a>
                                     <!-- devices dropdown items -->
                                     <ul class="dropdown-menu">
                                       <li class="dropdown-submenu">
-                                        <a class="dropdown-item text-primary" href="products-services.html#push-to-talk">Push To Talk</a>
-                                        <a class="dropdown-item text-primary" href="products-services.html#">To Add</a>
+                                        <a class="dropdown-item text-primary" href="./products/devices.html#push-to-talk">Push To Talk</a>
+                                        <a class="dropdown-item text-primary" href="./products/devices.html.html#">To Add</a>
 
                                       </li>
                                     </ul>
@@ -152,12 +152,14 @@
                             </a>
                             <!-- solutions and services dropdown items -->
                             <ul class="dropdown-menu multi-level text-primary mt-0" role="menu" aria-labelledby="dropdownMenu">
-                                <li class="dropdown-item"><a class="text-primary" href="industries.html#banking">Banking Financial Services & Insurance</a></li>
-                                <li class="dropdown-item"><a class="text-primary" href="industries.html#retail">Retail, Consumer Packaged Goods, Transportation</a class="text-primary"></li>
+                                <li class="dropdown-item"><a class="text-primary" href="industries.html#banking">Financial Services</a></li>
+                                <li class="dropdown-item"><a class="text-primary" href="industries.html#retail">Retail & Customers</a class="text-primary"></li>
                                 <li class="dropdown-item"><a class="text-primary" href="industries.html#government">Government Sector</a></li>
-                                <li class="dropdown-item"><a class="text-primary" href="industries.html#healthcare">Healthcare, Life Science & Services</a></li>
-                                <li class="dropdown-item"><a class="text-primary" href="industries.html#energy">Energy, Natural Resources Utilities and Engineering & Construction</a></li>
-                                <li class="dropdown-item"><a class="text-primary" href="industries.html#graphic">Graphic Design, Printing, Corporate Branding & Advertising</a></li>
+                                <li class="dropdown-item"><a class="text-primary" href="industries.html#healthcare">Healthcare</a></li>
+                                <li class="dropdown-item"><a class="text-primary" href="industries.html#energy">Natural Resources</a></li>
+                                <li class="dropdown-item"><a class="text-primary" href="industries.html#manufacturing">Manufacturing</a></li>
+                                <li class="dropdown-item"><a class="text-primary" href="industries.html#education">Education</a></li>
+                                <li class="dropdown-item"><a class="text-primary" href="industries.html#media">Media & Communications</a></li>
                             </ul>
                         </li>
 
@@ -357,17 +359,17 @@
                     <div class="swiper-wrapper">
                         <div class=" text-center">
                             <div class="row">
-                                    <div class="title col-md-12 mb-0 py-3 bg-orange">
-                                        <h3 class="my-3 title-blue" data-aos="fade-up" data-aos-delay="600" data-aos-duration="600" > <span class="light-sans title-blue">Message</span>  From Our Leader</h3>
+                                    <div class="title col-md-12 mb-0 py-2 bg-orange">
+                                        <h3 class="my-0 title-blue" data-aos="fade-up" data-aos-delay="600" data-aos-duration="600" > <span class="light-sans title-blue mb-0">Message</span>  From Our Leader</h3>
                                     </div>
 
-                                    <div class="content h-100 w-100 container-fluid bg-blue">
+                                    <div class="content h-100 w-100 container-fluid bg-blue pt-3">
                                         <div class="card bg-blue container px-0 h-100 mb-0">
                                             <div class="img-content bg-blue">
                                                 <img src="assets/images/MD.png" alt="img">
-                                                <div class="bottom-box pl-5">
-                                                    <h3>Eugine Silinda</h3>
-                                                    <p>Managing Director</p>
+                                                <div class="bottom-box text-center py-2">
+                                                    <h6>Eugene Silinda</h6>
+                                                    <p class="mb-0">Managing Director</p>
                                                 </div>
                                             </div>
                                             
